fix: align dialog paddings

--- a/packages/frontend/scss/dialogs/_group-styles.scss
+++ b/packages/frontend/scss/dialogs/_group-styles.scss
@@ -76,4 +76,5 @@ input.group-name-input {
 .group-profile-subtitle {
   text-align: center;
   padding-top: 6px;
+  margin-bottom: 20px;
 }
